fix(Tooltip): set overflow-wrap for long text (#19136)

--- a/packages/vuetify/src/components/VTooltip/VTooltip.sass
+++ b/packages/vuetify/src/components/VTooltip/VTooltip.sass
@@ -15,6 +15,7 @@
     opacity: 1
     pointer-events: none
     transition-property: opacity, transform
+    overflow-wrap: $tooltip-overflow-wrap
 
     &[class*="enter-active"]
       transition-timing-function: settings.$decelerated-easing
